@@ -30,6 +30,7 @@ MAN3=	libzip.mdoc \
 	zip_file_rename.mdoc \
 	zip_file_set_comment.mdoc \
 	zip_file_set_external_attributes.mdoc \
+	zip_file_set_mtime.mdoc \
 	zip_file_strerror.mdoc \
 	zip_fopen.mdoc \
 	zip_fopen_encrypted.mdoc \
